# finder-cli

./: .gitignore  README.md  pyproject.toml
finder_cli/: __init__.py  cli.py  collect.py  config.py  db.py  indexer.py  search.py
tests/: test_collect.py  test_indexer.py
