[project]
name = "finder-cli"
version = "0.1.0"
description = "A fast, local CLI tool for finding files on macOS, better than Spotlight for dev/student workflows"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
finder-cli = "finder_cli.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["finder_cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"
